save data from form to context and then use dispatcher to go to PrintServlet.java

--- a/src/main/webapp/LoginForm.html
+++ b/src/main/webapp/LoginForm.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form name="loginForm" method="post" action="loginServlet">
+<form name="loginForm" method="get" action="loginServlet">
     Username: <input type="text" name="username"/> <br/>
     Password: <input type="password" name="password"/> <br/>
     <input type="submit" value="Login"/>
